# BLAKE3

./: meson.build  meson_options.txt
c/: Makefile.testing  blake3.c  blake3.h  blake3_avx2.c  blake3_dispatch.c  blake3_impl.h  blake3_portable.c  meson.build
